# TypingGame

./: .gitignore  BuildScripts.py
Java/: settings.gradle
Java/ClientSocket/: settings.gradle
Java/ClientSocket/app/: build.gradle
Java/ClientSocket/app/src/main/java/ClientSocket/app/: ClientConnect.java
Java/ClientSocket/buildSrc/src/main/groovy/: ClientSocket.java-application-conventions.gradle  ClientSocket.java-library-conventions.gradle
Java/ClientSocket/utilities/: build.gradle
Java/ClientSocket/utilities/src/main/java/ClientSocket/: ClientSocket.java
Java/app/: build.gradle
Java/app/src/main/java/GameMain/: ClientSocket.java  ClientUI.java  GameGui.java  Test.java
cpp/: CMakeLists.txt
cpp/GameServer/: CMakeLists.txt  gameServer.cpp
cpp/include/Sockets/: ClientSocket.h  Endpoint.h  SendReceiveSocket.h  ServerSocket.h
cpp/src/GameLogic/: Client.cpp  Server.cpp
cpp/src/Sockets/: ClientSocket.cpp  SendReceiveSocket.cpp  ServerSocket.cpp
